fix text align center on hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,21 +96,25 @@ nav {
 #banner {
     min-height: 450px;
     width: 100%;
+    text-align: center;
     background: url("../images/pink-sunset.jpg") no-repeat center;
     border-bottom: #F89880 2px solid;
     background-size: cover;
     background-color: #d29b82;
-    animation-name: zoom;
+    animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
-@keyframes zoom {
-    from{
-        transform: scale(1);
+@keyframes hero-zoom {
+    0%{
+        transform: scale(1 , 1);
     }
-    to{
-        transform: scale (1.2);
+    50%{
+        transform: scale(1.5, 1.5);
+    }
+    100%{
+        transform: scale (1, 1);
     }
 }
 
